# app/models/category.rb
@@ -1,5 +1,7 @@
 class Category < ApplicationRecord
   include Ransackable
 
+  has_many :products, dependent: :restrict_with_error
+
   validates :name, presence: true, uniqueness: true
 end
