# app/serializers/product_serializer.rb
@@ -1,0 +1,5 @@
+class ProductSerializer < ActiveModel::Serializer
+  type :product
+
+  attributes :id, :name, :publish, :category_id, :created_at, :updated_at
+end
