# config/routes.rb
@@ -7,6 +7,7 @@ Rails.application.routes.draw do
       post "auth/register", to: "auth#register"
       post "auth/login", to: "auth#login"
       resources :categories
+      resources :products
     end
   end
 
